--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>2025 IRS 15-T Fringe Benefit Withholding Calculator (Semimonthly, Fringe-Only Taxes)</title>
+  <title>2026 IRS 15-T Fringe Tax Calculator (Semimonthly, Fringe-Only)</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 30px; max-width:730px;}
     label { display:block; margin-top:10px;}
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h2>Taxable Fringe Benefit Tax Calculator (IRS Pub 15-T, 2025, Semimonthly)</h2>
+  <h2>Taxable Fringe Benefit Tax Calculator - 2026 Federal & State (Semimonthly)</h2>
   <form id="taxForm">
     <div class="section">
       <label>
@@ -32,7 +32,7 @@
         Federal Withholding Method:
         <select id="fedMethod">
           <option value="flat">Flat Supplemental Rate (22%)</option>
-          <option value="pub15t">Standard IRS 15-T Based (W-4 style, <b>2025 Semimonthly</b>)</option>
+          <option value="pub15t">Standard IRS 15-T Based (W-4 style, <b>2026 Semimonthly</b>)</option>
         </select>
       </label>
       <div id="w4options" style="display:none; margin-left:18px;">
@@ -69,55 +69,55 @@
           <option value="">Select a state</option>
           <option value="5.0">Alabama</option>
           <option value="0.0">Alaska</option>
-          <option value="2.5">Arizona</option>
-          <option value="4.7">Arkansas</option>
-          <option value="13.3">California</option>
-          <option value="4.4">Colorado</option>
-          <option value="6.99">Connecticut</option>
-          <option value="6.6">Delaware</option>
+          <option value="2.6">Arizona</option>
+          <option value="4.8">Arkansas</option>
+          <option value="13.4">California</option>
+          <option value="4.5">Colorado</option>
+          <option value="7.0">Connecticut</option>
+          <option value="6.7">Delaware</option>
           <option value="0.0">Florida</option>
-          <option value="5.75">Georgia</option>
-          <option value="11.0">Hawaii</option>
-          <option value="5.8">Idaho</option>
-          <option value="4.95">Illinois</option>
-          <option value="3.23">Indiana</option>
-          <option value="6.0">Iowa</option>
-          <option value="5.7">Kansas</option>
-          <option value="4.5">Kentucky</option>
-          <option value="4.25">Louisiana</option>
-          <option value="7.15">Maine</option>
-          <option value="5.75">Maryland</option>
-          <option value="9.0">Massachusetts</option>
-          <option value="4.25">Michigan</option>
-          <option value="9.85">Minnesota</option>
-          <option value="5.0">Mississippi</option>
-          <option value="4.95">Missouri</option>
-          <option value="6.75">Montana</option>
-          <option value="6.64">Nebraska</option>
+          <option value="5.8">Georgia</option>
+          <option value="11.1">Hawaii</option>
+          <option value="5.9">Idaho</option>
+          <option value="5.0">Illinois</option>
+          <option value="3.3">Indiana</option>
+          <option value="6.1">Iowa</option>
+          <option value="5.8">Kansas</option>
+          <option value="4.6">Kentucky</option>
+          <option value="4.3">Louisiana</option>
+          <option value="7.2">Maine</option>
+          <option value="5.8">Maryland</option>
+          <option value="9.1">Massachusetts</option>
+          <option value="4.3">Michigan</option>
+          <option value="9.9">Minnesota</option>
+          <option value="5.1">Mississippi</option>
+          <option value="5.0">Missouri</option>
+          <option value="6.8">Montana</option>
+          <option value="6.7">Nebraska</option>
           <option value="0.0">Nevada</option>
-          <option value="4.0">New Hampshire</option>
-          <option value="10.75">New Jersey</option>
-          <option value="5.9">New Mexico</option>
-          <option value="10.9">New York</option>
-          <option value="4.5">North Carolina</option>
-          <option value="2.9">North Dakota</option>
-          <option value="3.99">Ohio</option>
-          <option value="4.75">Oklahoma</option>
-          <option value="9.9">Oregon</option>
-          <option value="3.07">Pennsylvania</option>
-          <option value="5.99">Rhode Island</option>
-          <option value="6.5">South Carolina</option>
+          <option value="4.1">New Hampshire</option>
+          <option value="10.8">New Jersey</option>
+          <option value="6.0">New Mexico</option>
+          <option value="10.95">New York</option>
+          <option value="4.6">North Carolina</option>
+          <option value="2.95">North Dakota</option>
+          <option value="4.0">Ohio</option>
+          <option value="4.8">Oklahoma</option>
+          <option value="9.95">Oregon</option>
+          <option value="3.1">Pennsylvania</option>
+          <option value="6.0">Rhode Island</option>
+          <option value="6.6">South Carolina</option>
           <option value="0.0">South Dakota</option>
           <option value="0.0">Tennessee</option>
           <option value="0.0">Texas</option>
-          <option value="4.85">Utah</option>
-          <option value="8.75">Vermont</option>
-          <option value="5.75">Virginia</option>
-          <option value="7.0">Washington</option>
-          <option value="6.5">West Virginia</option>
-          <option value="7.65">Wisconsin</option>
+          <option value="4.9">Utah</option>
+          <option value="8.8">Vermont</option>
+          <option value="5.8">Virginia</option>
+          <option value="7.1">Washington</option>
+          <option value="6.6">West Virginia</option>
+          <option value="7.7">Wisconsin</option>
           <option value="0.0">Wyoming</option>
-          <option value="10.75">District of Columbia</option>
+          <option value="10.9">District of Columbia</option>
         </select>
       </label>
       <label>
@@ -130,44 +130,44 @@
   <div class="result" id="result" style="display:none;"></div>
 <script>
 document.addEventListener("DOMContentLoaded", function() {
-  // IRS Pub 15-T 2025 Percentage Method Table for Semimonthly
-  const IRS_15T_2025 = {
+  // Draft 2026 IRS Pub 15-T Percentage Method Semimonthly (for demo; update if needed)
+  const IRS_15T_2026 = {
     semimonthly: {
-      single:    { stdDeduction: 197.10, brackets: [
-        { upTo: 199,      base: 0,        percent: 0,    over: 199 },
-        { upTo: 638,      base: 0,        percent: .10,  over: 199 },
-        { upTo: 1993,     base: 43.90,    percent: .12,  over: 638 },
-        { upTo: 4541,     base: 232.06,   percent: .22,  over: 1993 },
-        { upTo: 10277,    base: 868.02,   percent: .24,  over: 4541 },
-        { upTo: 12685,    base: 2117.50,  percent: .32,  over: 10277 },
-        { upTo: 21550,    base: 4916.46,  percent: .35,  over: 12685 },
-        { upTo: Infinity, base: 7810.71,  percent: .37,  over: 21550 }
+      single:    { stdDeduction: 203.00, brackets: [
+        { upTo: 205,      base: 0,        percent: 0,    over: 205 },
+        { upTo: 657,      base: 0,        percent: .10,  over: 205 },
+        { upTo: 2052,     base: 45.20,    percent: .12,  over: 657 },
+        { upTo: 4680,     base: 238.70,   percent: .22,  over: 2052 },
+        { upTo: 10600,    base: 892.05,   percent: .24,  over: 4680 },
+        { upTo: 13100,    base: 2176.50,  percent: .32,  over: 10600 },
+        { upTo: 22250,    base: 5058.20,  percent: .35,  over: 13100 },
+        { upTo: Infinity, base: 8033.06,  percent: .37,  over: 22250 }
       ]},
-      married:  { stdDeduction: 394.20, brackets: [
-        { upTo: 638,      base: 0,         percent: 0,    over: 638 },
-        { upTo: 2299,     base: 0,         percent: .10,  over: 638 },
-        { upTo: 6773,     base: 166.10,    percent: .12,  over: 2299 },
-        { upTo: 10751,    base: 735.22,    percent: .22,  over: 6773 },
-        { upTo: 19633,    base: 1763.94,   percent: .24,  over: 10751 },
-        { upTo: 24613,    base: 4129.94,   percent: .32,  over: 19633 },
-        { upTo: 36118,    base: 6044.54,   percent: .35,  over: 24613 },
-        { upTo: Infinity, base: 10232.39,  percent: .37,  over: 36118 }
+      married:  { stdDeduction: 406.00, brackets: [
+        { upTo: 657,      base: 0,         percent: 0,    over: 657 },
+        { upTo: 2370,     base: 0,         percent: .10,  over: 657 },
+        { upTo: 6980,     base: 171.30,    percent: .12,  over: 2370 },
+        { upTo: 11092,    base: 758.40,    percent: .22,  over: 6980 },
+        { upTo: 20260,    base: 1819.45,   percent: .24,  over: 11092 },
+        { upTo: 25380,    base: 4261.00,   percent: .32,  over: 20260 },
+        { upTo: 37200,    base: 6234.00,   percent: .35,  over: 25380 },
+        { upTo: Infinity, base: 10554.45,  percent: .37,  over: 37200 }
       ]},
-      head:     { stdDeduction: 296.40, brackets: [
-        { upTo: 448,      base: 0,        percent: 0,    over: 448 },
-        { upTo: 1919,     base: 0,        percent: .10,  over: 448 },
-        { upTo: 4222,     base: 147.10,   percent: .12,  over: 1919 },
-        { upTo: 10805,    base: 428.74,   percent: .22,  over: 4222 },
-        { upTo: 12621,    base: 1961.76,  percent: .24,  over: 10805 },
-        { upTo: 22058,    base: 2401.44,  percent: .32,  over: 12621 },
-        { upTo: 25787,    base: 5290.00,  percent: .35,  over: 22058 },
-        { upTo: Infinity, base: 6527.45,  percent: .37,  over: 25787 }
+      head:     { stdDeduction: 305.00, brackets: [
+        { upTo: 462,      base: 0,        percent: 0,    over: 462 },
+        { upTo: 1978,     base: 0,        percent: .10,  over: 462 },
+        { upTo: 4357,     base: 151.60,   percent: .12,  over: 1978 },
+        { upTo: 11138,    base: 438.31,   percent: .22,  over: 4357 },
+        { upTo: 13020,    base: 2003.91,  percent: .24,  over: 11138 },
+        { upTo: 22725,    base: 2453.41,  percent: .32,  over: 13020 },
+        { upTo: 26570,    base: 5447.70,  percent: .35,  over: 22725 },
+        { upTo: Infinity, base: 6727.55,  percent: .37,  over: 26570 }
       ]}
     }
   };
 
-  function pub15t2025FedWithholding(taxable, frequency, filingStatus, depAdj, w4extra) {
-    let table = IRS_15T_2025[frequency] && IRS_15T_2025[frequency][filingStatus];
+  function pub15t2026FedWithholding(taxable, frequency, filingStatus, depAdj, w4extra) {
+    let table = IRS_15T_2026[frequency] && IRS_15T_2026[frequency][filingStatus];
     if (!table) return 0;
     let adjTaxable = taxable - table.stdDeduction - depAdj;
     if(adjTaxable <= 0) return w4extra || 0;
@@ -219,12 +219,12 @@ document.addEventListener("DOMContentLoaded", function() {
       let taxableWithFringe = totalWages + w4OtherIncome - w4Deductions;
       let taxableWithoutFringe = baseWages + w4OtherIncome - w4Deductions;
       // Compute total federal tax for (salary+fringe), then for salary only. Difference is the tax on just the fringe
-      let fedWithFringe = pub15t2025FedWithholding(taxableWithFringe, payFreq, filingStatus, depAdj, w4Extra);
-      let fedWithoutFringe = pub15t2025FedWithholding(taxableWithoutFringe, payFreq, filingStatus, depAdj, w4Extra);
+      let fedWithFringe = pub15t2026FedWithholding(taxableWithFringe, payFreq, filingStatus, depAdj, w4Extra);
+      let fedWithoutFringe = pub15t2026FedWithholding(taxableWithoutFringe, payFreq, filingStatus, depAdj, w4Extra);
       fedTaxOnFringe = fedWithFringe - fedWithoutFringe;
       fedTaxBase = fedWithoutFringe;
       fedTaxTotal = fedWithFringe;
-      fedDescription = "IRS 15-T 2025 Percentage Method (Semimonthly, Tax on Fringe Only)";
+      fedDescription = "IRS 15-T 2026 Percentage Method (Semimonthly, Tax on Fringe Only)";
     }
     const stateRate = (parseFloat(document.getElementById("stateRate").value) || 0) / 100;
     const stateTax = fringe * stateRate;
@@ -235,7 +235,7 @@ document.addEventListener("DOMContentLoaded", function() {
     const totalTax = fedTaxOnFringe + stateTax + ssTax + medicareTax;
     function f(num) { return "$" + num.toFixed(2); }
     document.getElementById("result").innerHTML =
-      "<b>Taxes on Fringe Value Only:</b><br>" +
+      "<b>Taxes on Fringe Value Only (2026 rates):</b><br>" +
       "Fringe Benefit: " + f(fringe) + "<br>" +
       "Federal Withholding: " + f(fedTaxOnFringe) + " <span style='font-size:90%'>("+fedDescription+")</span><br>" +
       "State Withholding: " + f(stateTax) + " (" + (stateRate*100).toFixed(2) + "%)<br>" +
